--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 fastapi
 uvicorn
 ultralytics
+torch --index-url https://download.pytorch.org/whl/cpu
+torchvision --index-url https://download.pytorch.org/whl/cpu
 python-multipart
 pillow
